fix(cmp): table-pro 修改 showOverflow 默认值为 ellipsis

--- a/packages/theme-chalk/src/components/upload.less
+++ b/packages/theme-chalk/src/components/upload.less
@@ -71,9 +71,12 @@
   }
 
   &-preview-table {
-    // height: 300px;
     // border: 1px solid red;
     margin-top: 16px;
+
+    &.default-height {
+      height: 300px;
+    }
 
     &.no-margin-top {
       margin-top: 0;
